added batch redaction and pdf to jpg converter
